--- a/README
+++ b/README
@@ -1,8 +1,8 @@
 Raqm
 ====
 
-[![Linux & macOS build](https://travis-ci.org/HOST-Oman/libraqm.svg?branch=master)](https://travis-ci.org/HOST-Oman/libraqm)
-[![Windows build](https://img.shields.io/appveyor/ci/HOSTOman/libraqm/master.svg)](https://ci.appveyor.com/project/HOSTOman/libraqm)
+[![Linux & macOS build](https://travis-ci.org/HOST-Oman/libraqm-cmake.svg?branch=master)](https://travis-ci.org/HOST-Oman/libraqm-cmake)
+[![Windows build](https://img.shields.io/appveyor/ci/HOSTOman/libraqm-cmake/master.svg)](https://ci.appveyor.com/project/HOSTOman/libraqm-cmake)
 
 Raqm is a small library that encapsulates the logic for complex text layout and
 provide a convenient API.
